# phonikud-tts

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: hf_space.yml
examples/: piper.py  piper_with_session.py  space.py  styletts2.py  styletts2_light.py  with_chatterbox.py  zipvoice.py
examples/space/: Dockerfile  README.md  app.py
examples/space/static/: style.css
examples/space/templates/: index.html
examples/space_v1/: Dockerfile  README.md  app.py
examples/space_v1/static/: script.js  style.css
examples/space_v1/templates/: index.html
src/mishel/: __init__.py
src/phonikud_tts/: __init__.py  styletts2_light.py
