[project]
name = "phonikud-tts"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "phonikud",
    "phonikud-onnx>=1.0.3",
    "piper-onnx>=1.0.5",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
phonikud = { git = "https://github.com/thewh1teagle/phonikud" }
