[project]
name = "phonikud-tts"
version = "0.1.3"
description = "Text to speech in Hebrew"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "phonikud",
    "phonikud-onnx",
    "piper-onnx>=1.0.5",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "style-onnx",
]

[project.optional-dependencies]
chatterbox = [
    "phonikud-chatterbox",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
style-onnx = { git = "https://github.com/thewh1teagle/style-onnx" }
phonikud-chatterbox = { git = "https://github.com/thewh1teagle/phonikud-chatterbox" }
